--- a/A3EthanHall.project
+++ b/A3EthanHall.project
@@ -33,6 +33,14 @@
             "forReverseStates",
             "forReverseStates.json"
           ]
+        },
+        {
+          "!type": "External",
+          "file": [
+            "forms",
+            "functionCompare",
+            "functionCompare.json"
+          ]
         }
       ],
       "configxml": null,
@@ -54,6 +62,7 @@
       "eslintRules": null,
       "expanded_pmp": null,
       "extraheaders": null,
+      "firstform": "forReverseStates",
       "fontFamily": "system",
       "googlePlayKey": "certificates/google.json",
       "googlePlayTrack": "production",
